# termoras

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md  tech-stack.md
scripts/: generate-logo.py
src/: app.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  file_watcher.rs  git_commands.rs  lib.rs  pty_manager.rs
src/components/: file-icon.tsx  git-changes-view.tsx  git-diff-viewer.tsx  git-stash-section.tsx  kanban-board.tsx  kanban-card-editor.tsx  kanban-card.tsx  kanban-column.tsx  main-panel.tsx  onboarding-modal.tsx  onboarding-overlay.tsx  project-item.tsx  sidebar.tsx  tag-settings-modal.tsx  terminal-instance.tsx  terminal-item.tsx  terminal-panel.tsx  terminal-status-button.tsx  terminal-tab-bar.tsx  theme-toggle.tsx  update-button.tsx  update-notification.tsx
src/hooks/: use-global-keybindings.ts  use-update-checker.ts
src/lib/: image-upload.ts  kanban-storage.ts  storage.ts  syntax-highlight.ts  tag-colors.ts  tauri-commands.ts  telex-engine.ts  terminal-keybindings.ts  terminal-question-detector.ts  terminal-theme.ts
src/stores/: app-store.ts  auto-run-store.ts  card-run-store.ts  kanban-store.ts  onboarding-store.ts  tag-store.ts  terminal-process-store.ts  theme-store.ts
src/types/: index.ts  kanban.ts
