[package]
name = "termoras"
version = "0.1.0"
description = "Terminal manager for projects"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "Termoras"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
portable-pty = "0.8"
base64 = "0.22"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
